[build-system]
requires = ["setuptools"]

[project]
name = "region_utils"
version = "0.0.1"
dynamic = ["dependencies"]

authors = [
  { name="Paul Daniel", email="pada@dhigroup.com" },
]
description = "This library provides several useful functions for handling geometries and polygons representing regions."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
dev = ["pytest","ruff","ipykernel","black","mkdocs","mkdocstrings[python]", "mkdocs-material"]
test= ["pytest"]

[project.urls]
"Homepage" = "https://github.com/DHI/region-utils"
"Bug Tracker" = "https://github.com/DHI/region-utils/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["region_utils*"]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)